# ros_onnx_segmentation

./: README.md
onnx/: CMakeLists.txt  package.xml
onnx/include/ros_onnx_segmentation/: onnx_processor.h  yolo_processor.h
onnx/launch/: segmentation_launch.py
onnx/src/: main.cpp  onnx_processor.cpp  yolo_processor.cpp
onnxruntime_vendor/: CMakeLists.txt
seg_msgs/: CMakeLists.txt  package.xml
seg_msgs/msg/: ObjectInfo.msg  ObjectInfoArray.msg
