<?xml version="1.0"?>
<package format="3">
  <name>seg_msgs</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fire3577@naver.com">sh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>  <!-- 수정된 부분 -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
